--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -426,7 +426,7 @@ body {
     </div>
 
     <div id="logoutContainer" class="logout-container">
-        <button id="logoutBtn">Logout</button>
+        <button id="logoutBtn">Back</button>
       </div>
       
 
