--- a/addTasksOnboarding.html
+++ b/addTasksOnboarding.html
@@ -864,13 +864,13 @@ style="width: 60px; text-align: center; padding: 6px; border: 2px solid var(--pr
             </div>
             <div class="form-group">
                 <label>
-                    <span id="selectReward" class="select-btn">Reward</span>
+                    <span id="selectReward" class="select-btn">Buzz Points</span>
                     <input type="hidden" id="RewardValue" value="">
                 </label>
                 <div class="modal" id="rewardModal">
                     <div class="modal-content fancy-modal">
-                        <h3>Reward 🍯</h3>
-                        <input type="number" id="rewardInput" placeholder="      Enter Honey Amount" min="1" class="fancy-input smaller-input">
+                        <h3>Buzz Points 🍯</h3>
+                        <input type="number" id="rewardInput" placeholder="      Enter Point Amount" min="1" class="fancy-input smaller-input">
                         <div style="margin-top: 10px;">
                             <button id="saveRewardBtn" class="btn-save">Save</button>
                             <button id="closeRewardModal" class="btn-cancel">Cancel</button>
@@ -2015,7 +2015,13 @@ daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["An
         localStorage.removeItem("familyApp_editTask");
         localStorage.removeItem("familyApp_editTask_index");
         alert("Task saved successfully!");
-        window.location.href = "onboarding.html#step5";
+// Save task title for display in onboarding.html
+const onboardingTasks = JSON.parse(localStorage.getItem("onboardingTaskTitles") || "[]");
+onboardingTasks.push(task.title);
+localStorage.setItem("onboardingTaskTitles", JSON.stringify(onboardingTasks));
+localStorage.setItem("onboardingReturn", "step4"); // signal to return to step 4
+window.location.href = "onboarding.html";
+
 
     } catch (error) {
         console.error("Error saving task:", error);
