--- a/addTasksOnboarding.html
+++ b/addTasksOnboarding.html
@@ -77,11 +77,17 @@
 }
 
 
-    .form-group {
+.form-group {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 12px;
     }
+
+
+    .form-group label {
+    margin-right: 12px; /* Adjust the spacing */
+}
 
     label {
         font-size: 16px;
@@ -766,7 +772,7 @@
                 <label>Room</label>
                 <button type="button" id="selectRoom" class="select-btn">Select</button>
                 <input type="hidden" id="roomSelection" value="">
-            </div>
+            </div>            
             <div class="form-group">
                 <label>Frequency</label>
                 <button type="button" id="selectRepeat" class="select-btn">Select</button>
@@ -924,8 +930,8 @@ style="width: 60px; text-align: center; padding: 6px; border: 2px solid var(--pr
     </div>
     <div class="modal" id="roomModal">
         <div class="modal-content">
-            <h3>Choose Room</h3>
-            <ul>
+            <h3>Choose Rooms</h3>
+            <ul id="roomList">
                 <li data-value="Entire Home">Entire Home</li>
                 <li data-value="Living Room">Living Room</li>
                 <li data-value="Bedroom">Bedroom</li>
@@ -936,8 +942,10 @@ style="width: 60px; text-align: center; padding: 6px; border: 2px solid var(--pr
                 <li data-value="Outside">Outside</li>
                 <li data-value="Other">Other</li>
             </ul>
+            <button class="close-btn" id="closeRoomModal">Close</button>
         </div>
     </div>
+    
     <div class="modal" id="repeatModal">
         <div class="modal-content">
             <h3>Choose Repeat</h3>
@@ -1046,8 +1054,12 @@ document.addEventListener("DOMContentLoaded", async () => {
     if (editTask) {
         document.getElementById("taskTitle").value = editTask.title || "";
         document.getElementById("taskNotes").value = editTask.notes || "";
-        document.getElementById("roomSelection").value = editTask.room || "";
-        document.getElementById("selectRoom").textContent = editTask.room || "Select";
+        if (editTask.room) {
+    selectedRooms = editTask.room.split(",").map(r => r.trim());
+    document.getElementById("roomSelection").value = selectedRooms.join(", ");
+    document.getElementById("selectRoom").textContent = `Selected: ${selectedRooms.join(", ")}`;
+}
+
         document.getElementById("repeatSelection").value = editTask.repeat || "";
         document.getElementById("selectRepeat").textContent = editTask.repeat || "Select";
         document.getElementById("settingsSelection").value = editTask.settings || "";
@@ -1055,7 +1067,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         document.getElementById("taskReminder").checked = !!editTask.reminder;
         document.getElementById("addAlarmBtn").style.display = editTask.reminder ? "inline-block" : "none";
         document.getElementById("RewardValue").value = editTask.reward || "";
-        document.getElementById("selectReward").textContent = editTask.reward ? `Reward: ${editTask.reward} 🍯` : "Reward";
+        document.getElementById("selectReward").textContent = editTask.reward ? `Buzz Points: ${editTask.reward} 🍯` : "Reward";
 
         // Handle times per day/week/month
         document.getElementById("timesPerDayInput").value = editTask.timesPerDay || "1";
@@ -1158,7 +1170,12 @@ if (editTask.specificDates) {
             });
         }
     } else {
-    // For non-edit mode, initialize user list
+ 
+ 
+ 
+ 
+ 
+        // For non-edit mode, initialize user list
     populateUsers();
     // Set default date mode to From - To
 // ✅ Set default date mode to "Date" (not "from-to")
@@ -1170,16 +1187,8 @@ document.getElementById("specificDatesGroup").style.display = "none";
 document.getElementById("specificDaysGroup").style.display = "block";
 
 }
-
-document.getElementById("cancelTaskBtn").addEventListener("click", () => {
-
-    localStorage.removeItem("familyApp_editTask");
-    localStorage.removeItem("familyApp_editTask_index");
-    window.location.href = "onboarding.html#step4";
-  
 });
 
-});
 
 
 
@@ -1382,7 +1391,6 @@ document.getElementById("cancelTaskBtn").addEventListener("click", () => {
             });
         }
     
-        setupModal('roomModal', 'selectRoom', 'roomSelection');
         setupModal('settingsModal', 'selectSettings', 'settingsSelection');
 
         const repeatModal = document.getElementById('repeatModal');
