--- a/addTasksOnboarding.html
+++ b/addTasksOnboarding.html
@@ -1390,7 +1390,10 @@ document.getElementById("specificDaysGroup").style.display = "block";
                 }
             });
         }
-    
+
+        
+        setupModal('roomModal', 'selectRoom', 'roomSelection');
+
         setupModal('settingsModal', 'selectSettings', 'settingsSelection');
 
         const repeatModal = document.getElementById('repeatModal');
