--- a/onboarding.html
+++ b/onboarding.html
@@ -492,7 +492,7 @@ function goToAddTaskPage() {
 
   localStorage.setItem("onboardingChildName", firstChild);
   localStorage.setItem("onboardingReturn", "step4");
-  window.location.href = "addTasksOnboarding.html";
+  window.location.href = "/BeeMazing-Y1/mobile/3-Tasks/addtasks.html?from=onboarding";
 }
 
 
