--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -2082,8 +2082,19 @@ daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["An
         console.log("Server response:", data);
         localStorage.removeItem("familyApp_editTask");
         localStorage.removeItem("familyApp_editTask_index");
+
+
         alert("Task saved successfully!");
-        window.location.href = "tasks.html";
+        const urlParams = new URLSearchParams(window.location.search);
+        const from = urlParams.get("from");
+
+        if (from === "onboarding") {
+            window.location.href = "/BeeMazing-Y1/onboarding.html#step4";
+        } else {
+            window.location.href = "tasks.html";
+        }
+
+
     } catch (error) {
         console.error("Error saving task:", error);
         alert(`Failed to save task: ${error.message}`);
@@ -2098,11 +2109,12 @@ function handleCancel() {
   const from = urlParams.get("from");
 
   if (from === "onboarding") {
-    window.location.href = "/BeeMazing-Y1/mobile/onboarding.html#step4";
+    window.location.href = "/BeeMazing-Y1/onboarding.html#step4";
   } else {
     window.location.href = "tasks.html";
   }
 }
+
 
 
     </script>    
