onboarding fix #16Reset

--- a/onboarding.html
+++ b/onboarding.html
@@ -194,8 +194,6 @@ window.addEventListener("DOMContentLoaded", () => {
 
     const email = localStorage.getItem("currentAdminEmail");
 
-
-
     function showStep(stepNum) {
   document.querySelectorAll('.step').forEach(step => step.classList.remove('active'));
   document.getElementById(`step${stepNum}`).classList.add('active');
@@ -206,21 +204,10 @@ window.addEventListener("DOMContentLoaded", () => {
   }
 
   if (stepNum === 2) {
-    restoreParentInputs();
-  }
-
-  if (stepNum === 4) {
-    // ✅ Show the task title saved during onboarding
-    const title = localStorage.getItem("onboarding_task_title");
-    const taskTitleList = document.getElementById("taskTitleList");
-    taskTitleList.innerHTML = title
-      ? `<div style="background:#2C2F3A;padding:10px;border-radius:8px;">✅ Task created: <strong>${title}</strong></div>`
-      : `<div style="color:#ccc;">No task created yet.</div>`;
-  }
+  restoreParentInputs();
 }
 
-
-
+}
 
 
 function restoreChildInputs() {
@@ -475,7 +462,6 @@ function addChildInput() {
     localStorage.removeItem("onboardingTaskTitles");
     localStorage.removeItem("onboardingRewardTitles");
     localStorage.removeItem("onboardingChildName");
-    localStorage.removeItem("onboarding_task_title");
 
     // ✅ Redirect to user profile
     window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html?admin=${encodeURIComponent(email)}&user=${encodeURIComponent(parentUser)}`;
@@ -590,15 +576,10 @@ function updateStep4Tasks() {
 window.addEventListener("DOMContentLoaded", () => {
   const onboardingReturn = localStorage.getItem("onboardingReturn");
 
-
-
   if (onboardingReturn === "step4") {
-  localStorage.removeItem("onboardingReturn");
-  showStep(4);
-  updateStep4Tasks();
-}
-
-else if (onboardingReturn === "step5") {
+    localStorage.removeItem("onboardingReturn");
+    showStep(4);
+  } else if (onboardingReturn === "step5") {
     localStorage.removeItem("onboardingReturn");
     showStep(5);
   }
