--- a/onboarding.html
+++ b/onboarding.html
@@ -194,20 +194,31 @@ window.addEventListener("DOMContentLoaded", () => {
 
     const email = localStorage.getItem("currentAdminEmail");
 
+
+
+
     function showStep(stepNum) {
-  document.querySelectorAll('.step').forEach(step => step.classList.remove('active'));
-  document.getElementById(`step${stepNum}`).classList.add('active');
-  updateNavigationButtons(stepNum);
+    document.querySelectorAll('.step').forEach(step => step.classList.remove('active'));
+    document.getElementById(`step${stepNum}`).classList.add('active');
+    updateNavigationButtons(stepNum);
 
-  if (stepNum === 3) {
-    restoreChildInputs();
-  }
+    if (stepNum === 2) {
+        restoreParentInputs();
+    }
 
-  if (stepNum === 2) {
-  restoreParentInputs();
+    if (stepNum === 3) {
+        restoreChildInputs();
+    }
+
+    if (stepNum === 4) {
+        updateStep4Tasks();
+    }
 }
 
-}
+
+
+
+
 
 
 function restoreChildInputs() {
