--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1014,6 +1014,9 @@ style="width: 60px; text-align: center; padding: 6px; border: 2px solid var(--pr
     <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
     <script>
 
+
+
+
 document.addEventListener("DOMContentLoaded", async () => {
     const currentAdmin = localStorage.getItem("currentAdminEmail");
     if (!currentAdmin) {
@@ -1021,16 +1024,43 @@ document.addEventListener("DOMContentLoaded", async () => {
         return;
     }
 
-    const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
+    // Check if in edit mode via URL parameters
+    const urlParams = new URLSearchParams(window.location.search);
+    const editTitle = urlParams.get("editTitle");
+    const editDate = urlParams.get("editDate");
+
+    let editTask = null;
+    if (editTitle && editDate) {
+        // Fetch all tasks from server and find the matching task
+        try {
+            const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(currentAdmin)}`, {
+                method: "GET",
+                headers: { "Content-Type": "application/json" }
+            });
+            const data = await response.json();
+            if (response.ok && data.tasks) {
+                // Find task by title and date (date matches start date of range)
+                editTask = data.tasks.find(task => task.title === editTitle && task.date.startsWith(editDate));
+                if (!editTask) {
+                    console.error(`Task not found: title=${editTitle}, date=${editDate}`);
+                }
+            } else {
+                console.error("Failed to fetch tasks:", data.error || "No tasks returned");
+            }
+        } catch (error) {
+            console.error("Error fetching tasks:", error);
+        }
+    }
+
     if (editTask) {
+        // Populate form for editing
         document.getElementById("taskTitle").value = editTask.title || "";
         document.getElementById("taskNotes").value = editTask.notes || "";
         if (editTask.room) {
-    selectedRooms = editTask.room.split(",").map(r => r.trim());
-    document.getElementById("roomSelection").value = selectedRooms.join(", ");
-    document.getElementById("selectRoom").textContent = `Selected: ${selectedRooms.join(", ")}`;
-}
-
+            selectedRooms = editTask.room.split(",").map(r => r.trim());
+            document.getElementById("roomSelection").value = selectedRooms.join(", ");
+            document.getElementById("selectRoom").textContent = `Selected: ${selectedRooms.join(", ")}`;
+        }
         document.getElementById("repeatSelection").value = editTask.repeat || "";
         document.getElementById("selectRepeat").textContent = editTask.repeat || "Select";
         document.getElementById("settingsSelection").value = editTask.settings || "";
@@ -1048,67 +1078,61 @@ document.addEventListener("DOMContentLoaded", async () => {
         document.getElementById("timesPerWeekGroup").style.display = editTask.repeat === "Weekly" ? "flex" : "none";
         document.getElementById("timesPerMonthGroup").style.display = editTask.repeat === "Monthly" ? "flex" : "none";
 
-// Handle date mode
-if (editTask.specificDates) {
-    // Specific Dates mode
-    document.getElementById("dateModeSelection").value = "specific-dates";
-    document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
-    document.querySelector(".mode-btn[data-mode='specific-dates']").classList.add("active");
-    document.getElementById("specificDatesGroup").style.display = "block";
-    document.getElementById("fromToDateGroup").style.display = "none";
-    document.getElementById("specificDaysGroup").style.display = "none";
-    selectedDates = editTask.specificDates.split(",").map(date => new Date(date));
-    specificDatesInput.value = editTask.specificDates;
-    flatpickrSpecific.setDate(selectedDates);
-    updateSelectedDatesDisplay();
-} else if (editTask.date) {
-    // From-To mode with Days
-    document.getElementById("dateModeSelection").value = "date";
-    document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
-    document.querySelector(".mode-btn[data-mode='date']").classList.add("active");
-    document.getElementById("fromToDateGroup").style.display = "block";
-    document.getElementById("specificDatesGroup").style.display = "none";
-    document.getElementById("specificDaysGroup").style.display = "block";
+        // Handle date mode
+        if (editTask.specificDates) {
+            document.getElementById("dateModeSelection").value = "specific-dates";
+            document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
+            document.querySelector(".mode-btn[data-mode='specific-dates']").classList.add("active");
+            document.getElementById("specificDatesGroup").style.display = "block";
+            document.getElementById("fromToDateGroup").style.display = "none";
+            document.getElementById("specificDaysGroup").style.display = "none";
+            selectedDates = editTask.specificDates.split(",").map(date => new Date(date));
+            specificDatesInput.value = editTask.specificDates;
+            flatpickrSpecific.setDate(selectedDates);
+            updateSelectedDatesDisplay();
+        } else if (editTask.date) {
+            document.getElementById("dateModeSelection").value = "date";
+            document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
+            document.querySelector(".mode-btn[data-mode='date']").classList.add("active");
+            document.getElementById("fromToDateGroup").style.display = "block";
+            document.getElementById("specificDatesGroup").style.display = "none";
+            document.getElementById("specificDaysGroup").style.display = "block";
 
-    const [from, to] = editTask.date.split(" to ");
-    document.getElementById("taskDate").value = from || "";
-    flatpickrFrom.setDate(from);
-    document.getElementById("dateDisplay").textContent = new Date(from).toLocaleDateString(undefined, {
-        month: "long",
-        day: "numeric",
-    });
-    if (to && to !== "3000-01-01") {
-        document.getElementById("taskDateTo").value = to;
-        flatpickrTo.setDate(to);
-        document.getElementById("dateDisplayTo").textContent = new Date(to).toLocaleDateString(undefined, {
-            month: "long",
-            day: "numeric",
-        });
-        dateToWrapper.style.display = "flex";
-        addEndDateBtn.style.display = "none";
-        dateMode = "from-to";
-    } else {
-        document.getElementById("taskDateTo").value = "";
-        document.getElementById("dateDisplayTo").textContent = "To Date";
-        dateToWrapper.style.display = "none";
-        addEndDateBtn.style.display = "block";
-        dateMode = "from";
-    }
+            const [from, to] = editTask.date.split(" to ");
+            document.getElementById("taskDate").value = from || "";
+            flatpickrFrom.setDate(from);
+            document.getElementById("dateDisplay").textContent = new Date(from).toLocaleDateString(undefined, {
+                month: "long",
+                day: "numeric",
+            });
+            if (to && to !== "3000-01-01") {
+                document.getElementById("taskDateTo").value = to;
+                flatpickrTo.setDate(to);
+                document.getElementById("dateDisplayTo").textContent = new Date(to).toLocaleDateString(undefined, {
+                    month: "long",
+                    day: "numeric",
+                });
+                dateToWrapper.style.display = "flex";
+                addEndDateBtn.style.display = "none";
+                dateMode = "from-to";
+            } else {
+                document.getElementById("taskDateTo").value = "";
+                document.getElementById("dateDisplayTo").textContent = "To Date";
+                dateToWrapper.style.display = "none";
+                addEndDateBtn.style.display = "block";
+                dateMode = "from";
+            }
 
-    // Handle Days of the Week
-    selectedDays = editTask.daysOfWeek || ["Any"];
-    updateSelectedDaysDisplay();
-}
+            selectedDays = editTask.daysOfWeek || ["Any"];
+            updateSelectedDaysDisplay();
+        }
 
-
-        // Handle users
         if (editTask.users) {
             selectedUsers = [...editTask.users].map(u => u.trim()).filter(u => u);
             updateSelectedUsersDisplay();
             populateUsers();
         }
 
-        // Handle alarms
         if (editTask.alarms?.length) {
             alarms = [...editTask.alarms];
             alarms.forEach((time) => {
@@ -1141,29 +1165,16 @@ if (editTask.specificDates) {
             });
         }
     } else {
- 
- 
- 
- 
- 
-        // For non-edit mode, initialize user list
-    populateUsers();
-    // Set default date mode to From - To
-// ✅ Set default date mode to "Date" (not "from-to")
-document.getElementById("dateModeSelection").value = "date";
-document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
-document.querySelector(".mode-btn[data-mode='date']").classList.add("active");
-document.getElementById("fromToDateGroup").style.display = "block";
-document.getElementById("specificDatesGroup").style.display = "none";
-document.getElementById("specificDaysGroup").style.display = "block";
-
-}
+        // Initialize form for new task
+        populateUsers();
+        document.getElementById("dateModeSelection").value = "date";
+        document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
+        document.querySelector(".mode-btn[data-mode='date']").classList.add("active");
+        document.getElementById("fromToDateGroup").style.display = "block";
+        document.getElementById("specificDatesGroup").style.display = "none";
+        document.getElementById("specificDaysGroup").style.display = "block";
+    }
 });
-
-
-
-
-
 
 
 
@@ -1968,10 +1979,6 @@ window.addEventListener("click", (e) => {
 
 
 
-
-
-
-
         document.getElementById("addTaskForm").addEventListener("submit", async function (event) {
     event.preventDefault();
 
@@ -2004,14 +2011,13 @@ window.addEventListener("click", (e) => {
         return;
     }
     if (dateMode === "date" && !dateFrom) {
-    alert("Please select a start date.");
-    return;
-}
-if (dateMode === "specific-dates" && !specificDates) {
-    alert("Please select at least one date.");
-    return;
-}
-
+        alert("Please select a start date.");
+        return;
+    }
+    if (dateMode === "specific-dates" && !specificDates) {
+        alert("Please select at least one date.");
+        return;
+    }
 
     // Cap and sanitize
     if (timesPerDay > 100) timesPerDay = 100;
@@ -2021,20 +2027,18 @@ if (dateMode === "specific-dates" && !specificDates) {
     if (timesPerWeek !== null && timesPerWeek < 1) timesPerWeek = 1;
     if (timesPerMonth !== null && timesPerMonth < 1) timesPerMonth = 1;
 
-
     let dateValue = "";
-if (dateMode === "date") {
-    const fromDate = dateFrom;
-    const toDate = dateTo || "3000-01-01";
-    dateValue = `${fromDate} to ${toDate}`;
-} else if (dateMode === "specific-dates" && specificDates) {
-    const dates = specificDates.split(",").map(d => d.trim()).filter(d => d);
-    dateValue = `${dates[0]} to ${dates[dates.length - 1]}`;
-} else {
-    const today = new Date().toISOString().split("T")[0];
-    dateValue = `${today} to 3000-01-01`;
-}
-
+    if (dateMode === "date") {
+        const fromDate = dateFrom;
+        const toDate = dateTo || "3000-01-01";
+        dateValue = `${fromDate} to ${toDate}`;
+    } else if (dateMode === "specific-dates" && specificDates) {
+        const dates = specificDates.split(",").map(d => d.trim()).filter(d => d);
+        dateValue = `${dates[0]} to ${dates[dates.length - 1]}`;
+    } else {
+        const today = new Date().toISOString().split("T")[0];
+        dateValue = `${today} to 3000-01-01`;
+    }
 
     const task = {
         title,
@@ -2051,27 +2055,29 @@ if (dateMode === "date") {
         timesPerWeek: repeat === "Weekly" ? timesPerWeek : undefined,
         timesPerMonth: repeat === "Monthly" ? timesPerMonth : undefined,
         specificDates: dateMode === "specific-dates" ? specificDates : undefined,
-daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["Any"]) : undefined
+        daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["Any"]) : undefined
     };
 
     console.log("Task being saved:", JSON.stringify(task, null, 2));
 
     const currentAdmin = localStorage.getItem("currentAdminEmail");
-    const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
+    const urlParams = new URLSearchParams(window.location.search);
+    const editTitle = urlParams.get("editTitle");
+    const editDate = urlParams.get("editDate");
 
     try {
         const url = "https://beemazing.onrender.com/api/tasks";
-        const body = editTask
+        const body = (editTitle && editDate)
             ? {
                   adminEmail: currentAdmin,
                   task,
-                  originalTitle: editTask.title,
-                  originalDate: editTask.date
+                  originalTitle: editTitle,
+                  originalDate: editDate
               }
             : { adminEmail: currentAdmin, task };
 
         const response = await fetch(url, {
-            method: editTask ? "PUT" : "POST",
+            method: (editTitle && editDate) ? "PUT" : "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify(body)
         });
@@ -2080,38 +2086,31 @@ daysOfWeek: dateMode === "date" ? (selectedDays.length > 0 ? selectedDays : ["An
         if (!response.ok) throw new Error(data.error || `HTTP error ${response.status}`);
 
         console.log("Server response:", data);
-        localStorage.removeItem("familyApp_editTask");
-        localStorage.removeItem("familyApp_editTask_index");
 
         alert("Task saved successfully!");
 
-        // Check if coming from onboarding
-// Store task title in localStorage if coming from onboarding
-const urlParams = new URLSearchParams(window.location.search);
-const from = urlParams.get("from");
-if (from === "onboarding") {
-    const existingTitles = JSON.parse(localStorage.getItem("onboardingTaskTitles") || "[]");
-    if (!existingTitles.includes(title)) {
-        existingTitles.push(title);
-        localStorage.setItem("onboardingTaskTitles", JSON.stringify(existingTitles));
-    }
-}
+        // Store task title in localStorage if coming from onboarding
+        const from = urlParams.get("from");
+        if (from === "onboarding") {
+            const existingTitles = JSON.parse(localStorage.getItem("onboardingTaskTitles") || "[]");
+            if (!existingTitles.includes(title)) {
+                existingTitles.push(title);
+                localStorage.setItem("onboardingTaskTitles", JSON.stringify(existingTitles));
+            }
+        }
 
-
-
-if (from === "onboarding") {
-    window.location.href = "/BeeMazing-Y1/onboarding.html#step4";
-} else {
-    window.location.href = "tasks.html";
-}
-
-
-
+        if (from === "onboarding") {
+            window.location.href = "/BeeMazing-Y1/onboarding.html#step4";
+        } else {
+            window.location.href = "tasks.html";
+        }
     } catch (error) {
         console.error("Error saving task:", error);
         alert(`Failed to save task: ${error.message}`);
     }
 });
+
+
 
 
 
